# neural-network-hft-experiment

./: .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.monitoring.yml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml
configs/: config.yaml  sweep.yaml
configs/data/: xauusd.yaml
configs/deployment/: grafana_dashboard.json  production.yaml  prometheus.yml
configs/model/: cnn_lstm.yaml  mamba_ssm.yaml  tcn.yaml
configs/rl/: dqn.yaml  meta_policy.yaml  sac.yaml
data/: daily_embedding_cache.npy
data/ft_cache/parquet/: ft_2021-04_to_2026-04.parquet  ft_2025-04_to_2026-04.parquet
data/ft_cache/processed/: articles_2021-04_2026-04_0.005.json  articles_2025-04_2026-04_0.005.json
notebooks/: README.md
rust_inference/: Cargo.toml
rust_inference/src/: lib.rs  ring_buffer.rs  scaler.rs
scripts/: backtest.py  build_embeddings.py  download_data.py  download_news.py  export_model.py  paper_trade.py  scrape_ft.py  train.py  train_regime.py  train_rl.py
src/: __init__.py
src/backtesting/: engine.py
src/data/: feature_engineering.py  ft_scraper.py  ingestion.py  preprocessing.py  sentiment.py  tick_store.py
src/data/news_fetchers/: base.py  ft_sitemap.py  investing_sitemap.py
src/execution/: broker_mt5.py  order_manager.py
src/inference/: onnx_engine.py
src/models/: cnn_lstm.py  ensemble.py  factory.py  mamba_encoder.py  regime_classifier.py  tcn.py
src/monitoring/: alerts.py
src/risk/: circuit_breaker.py  uncertainty.py
src/rl/: behavior_cloning.py  dqn_agent.py  environment.py  meta_policy.py  replay_buffer.py  sac_agent.py
src/utils/: config.py  logger.py
tests/: conftest.py  test_core.py  test_integration.py
